--- a/samples/basicDonut.html
+++ b/samples/basicDonut.html
@@ -20,6 +20,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script type="module" src="/src/basciTriangle2.ts"></script>
+    <script type="module" src="/src/basicDonut.js"></script>
   </body>
 </html>
